--- a/servicos.html
+++ b/servicos.html
@@ -18,8 +18,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="#">Sobre Nos</a></li>
-                <li><a href="#">Termos e Condicoes</a></li>
+                <li><a href="#">Sobre_Nos</a></li>
+                <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
     </header>
