--- a/rbz-security/sobreNos.html
+++ b/rbz-security/sobreNos.html
@@ -7,18 +7,18 @@
     <title>Rbz_security</title>
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/midia.css">
 </head>
 
 <body>
     <header>
-        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px" class="logo">RBZ Security</h1>
+        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px">RBZ Security</h1>
+
         <nav>
             <ul id="nav1">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="sobreNos.html">Sobre_Nos</a></li>
+                <li><a href="#">Sobre_Nos</a></li>
                 <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <p class="desenvolvido">Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
+        <p>Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
                 target="blank">Cristencio Nhavene</a></p>
     </footer>
 </body>
