--- a/servicos.html
+++ b/servicos.html
@@ -7,18 +7,18 @@
     <title>Servicos</title>
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/midia.css">
 </head>
 
 <body>
     <header>
-        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px">RBZ Security</h1>
-
+        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px" class="logo">RBZ Security</h1>
         <nav>
             <ul id="nav1">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="#">Sobre_Nos</a></li>
+                <li><a href="sobreNos.html">Sobre_Nos</a></li>
                 <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
@@ -27,25 +27,25 @@
         <article>
             <h2>Nossos Servicos</h2>
             <div class="servicos">
-                <h4>Seguranca Pessoal</h4>
+                <h4>Segurança Pessoal</h4>
                 <div class="descri">
-                    <p>&bull; Zelamos pela a sua seguranca pessoal, proporcinando tranquilidade e confiaca, para que
+                    <p>&bull; Zelamos pela a sua segurança pessoal, proporcinando tranquilidade e confiaca, para que
                         viva e trabalhe sem preocupacoes! </p>
                 </div>
                 <h1>&#64rbz</h1>
             </div>
             <div class="servicos">
-                <h4>Seguranca Patrimonial</h4>
+                <h4>Segurança Patrimonial</h4>
                 <div class="descri">
-                    <p>&bull; Para sua melhor tranquilidade tambem zelamos pela seguranca dos teus bens como imoveis e
+                    <p>&bull; Para sua melhor tranquilidade tambem zelamos pela segurança dos teus bens como imoveis e
                         equipamentos! </p>
                 </div>
                 <h1>&#64rbz</h1>
             </div>
             <div class="servicos">
-                <h4>Seguranca em Enventos</h4>
+                <h4>Segurança em Enventos</h4>
                 <div class="descri">
-                    <p style="font-size: 14.7px;">&bull; Fazemos a cubertura de seguranca nos seus Enventos, garantindo
+                    <p style="font-size: 14.7px;">&bull; Fazemos a cubertura de segurança nos seus Enventos, garantindo
                         que todas as medidas sejam em vigor para proteger os participantes no local! </p>
                 </div>
                 <h1>&#64rbz</h1>
@@ -62,7 +62,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
+        <p class="desenvolvido">Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
                 target="blank">Cristencio Nhavene</a></p>
     </footer>
 </body>
