--- a/contactos.html
+++ b/contactos.html
@@ -7,18 +7,18 @@
     <title>Contactos</title>
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/midia.css">
 </head>
 
 <body>
     <header>
-        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px">RBZ Security</h1>
-
+        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px" class="logo">RBZ Security</h1>
         <nav>
             <ul id="nav1">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="#">Sobre_Nos</a></li>
+                <li><a href="sobreNos.html">Sobre_Nos</a></li>
                 <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
@@ -31,20 +31,20 @@
             </h2>
 
             <h2>Siga no nas redes sociais</h2>
-            <div id="soci"
-                <a href=""><img src="imagens/logo-facebook.png" alt=""></a>
-                <a href=""><img src="imagens/logo-instagram.png" alt=""></a>
-                <a href=""><img src="imagens/logo-twitter.png" alt=""></a>
-                <a href=""><img src="imagens/logo-github.png" alt=""></a>
-                <a href=""><img src="imagens/logo-whatsapp.png" alt=""></a>
-                <a href=""><img src="imagens/logo-linkdin.png" alt=""></a>
+            <div id="soci">
+                <a href=""><img src="imagens/logo-facebook.png" alt="" class="soc"></a>
+                <a href=""><img src="imagens/logo-instagram.png" alt="" class="soc"></a>
+                <a href=""><img src="imagens/logo-twitter.png" alt="" class="soc"></a>
+                <a href=""><img src="imagens/logo-github.png" alt="" class="soc"></a>
+                <a href=""><img src="imagens/logo-whatsapp.png" alt="" class="soc"></a>
+                <a href=""><img src="imagens/logo-linkdin.png" alt="" class="soc"></a>
         </div>
 
         </article>
     </main>
 
     <footer>
-        <p>Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
+        <p class="desenvolvido">Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
                 target="blank">Cristencio Nhavene</a></p>
     </footer>
 </body>
