--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rbz_security</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta/css/all.min.css">
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/midia.css">
 </head>
 
 <body>
     <header>
-        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px">RBZ Security</h1>
+        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px" class="logo">RBZ Security</h1>
 
         <nav>
             <ul id="nav1">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="#">Sobre_Nos</a></li>
+                <li><a href="sobreNos.html">Sobre_Nos</a></li>
                 <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <p>Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
+        <p class="desenvolvido">Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
                 target="blank">Cristencio Nhavene</a></p>
     </footer>
 </body>
