--- a/rbz-security/contactos.html
+++ b/rbz-security/contactos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicos</title>
+    <title>Contactos</title>
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,8 +18,8 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="#">Sobre Nos</a></li>
-                <li><a href="#">Termos e Condicoes</a></li>
+                <li><a href="#">Sobre_Nos</a></li>
+                <li><a href="#">Termos_e_Condicoes</a></li>
             </ul>
         </nav>
     </header>
@@ -31,14 +31,15 @@
             </h2>
 
             <h2>Siga no nas redes sociais</h2>
-            <h2>
-                <a href=""><img src="imagens/logo-facebook.png" class="soci" alt=""></a>
-                <a href=""><img src="imagens/logo-instagram.png" class="soci" alt=""></a>
-                <a href=""><img src="imagens/logo-twitter.png" class="soci" alt=""></a>
-                <a href=""><img src="imagens/logo-github.png" class="soci" alt=""></a>
-                <a href=""><img src="imagens/logo-whatsapp.png" class="soci" alt=""></a>
-                <a href=""><img src="imagens/logo-linkdin.png" class="soci" alt=""></a>
-            </h2>
+            <div id="soci"
+                <a href=""><img src="imagens/logo-facebook.png" alt=""></a>
+                <a href=""><img src="imagens/logo-instagram.png" alt=""></a>
+                <a href=""><img src="imagens/logo-twitter.png" alt=""></a>
+                <a href=""><img src="imagens/logo-github.png" alt=""></a>
+                <a href=""><img src="imagens/logo-whatsapp.png" alt=""></a>
+                <a href=""><img src="imagens/logo-linkdin.png" alt=""></a>
+        </div>
+
         </article>
     </main>
 
