--- a/rbz-security/rbz-security/index.html
+++ b/rbz-security/rbz-security/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rbz_security</title>
+    <title>Document</title>
     <link rel="shortcut icon" href="imagens/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/midia.css">
 </head>
 
 <body>
     <header>
-        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px" class="logo">RBZ Security</h1>
+        <h1><img src="imagens/logo3.png" alt="logo" height="100px" width="130px">RBZ Security</h1>
+
         <nav>
             <ul id="nav1">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="servicos.html">Servicos</a></li>
                 <li><a href="contactos.html">Contactos</a></li>
-                <li><a href="sobreNos.html">Sobre_Nos</a></li>
-                <li><a href="#">Termos_e_Condicoes</a></li>
+                <li><a href="#">Sobre Nos</a></li>
+                <li><a href="#">Termos e Condicoes</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
                             <li>**Expandir Impacto Positivo**: Ampliar a segurança em comunidades e negócios.</li>
                             <li>**Promover Confiança e Segurança**: Criar um ambiente onde clientes se sintam sempre protegidos.</li>
                             <li>**Adotar Sustentabilidade**: Integrar práticas sustentáveis em suas operações.</li>
-                            <li>**Desenvolver Tecnologias Avançadas**: Investir em pesquisa e desenvolvimento para estar sempre à frente das ameaças emergentes.</li>
+                            **Desenvolver Tecnologias Avançadas**: Investir em pesquisa e desenvolvimento para estar sempre à frente das ameaças emergentes.
                         </ol>
                     </p>
                 </div>
@@ -83,6 +83,7 @@
                     </p>
                 </div>
             </div>
+            <div></div>
             <div class="elementos">
                 <h4>&bullet; Estrategiia</h4>
                 <div class="descri2">
@@ -108,7 +109,7 @@
     </main>
 
     <footer>
-        <p class="desenvolvido">Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
+        <p>Desenvolvido por <a href="https://www.instagram.com/cristencio_nhavene?igsh=YzljYTk1ODg3Z=="
                 target="blank">Cristencio Nhavene</a></p>
     </footer>
 </body>
